	  method
	* removed extraneous '\n' from module error reporting with dlerror()
	* removed 'FATAL:  ' from pgsql exception messages
	* sybase: implemented fast, efficient binary datetime conversions, use
	  floating point for conversions to and from Sybase 1/3 second time 
	  values
	* sybase: convert TIME to Qore datetime as offset from Qore epoch
	* sybase: fixed native qore type binding

2006.05.23: David Nichols
	* fixed a deadlock in transaction lock timeouts in the ManagedDatasource
	  class (qore Datasource class)
	* sybase: added support for unichar types, strip trailing blanks from 
	  CHAR columns, fixed off-by-one bug in datetime conversions, mapped
	  DECIMAL,NUMERIC to string to avoid losing data, fixed string encoding
	  bugs, fixed transaction management model to fit qore's by enabling
	  chained transaction mode
	* fixed DECIMAL->string conversions for FreeTDS (returns DECIMAL as
	  float)
	* started moving test schema management into db-test.q, added pgsql
	  support

2006.05.22: David Nichols
	* fixed select method and encodings for sybase driver

2006.05.19: David Nichols
	* more "char *" -> "const char *" API header updates
	* fixed a bug in the new thread variable stack handling
	* added DatasourcePool class for transparent Datasource connection
	  pooling.  Use the DatasourcePool class like the Datasource class;
	  when you enter a transaction, a Datasource is automatically allocated
	  to the thread, and released when the transaction is committed or 
	  rolled back.  Allocated connections are tracked with Qore's thread
	  resource tracking and failure to release a connection before a thread
	  terminates will result in an exception being thrown and the connection
	  being automatically returned to the pool.
	* new methods: Datasource::selectRow() and Datasource::vselectRow()
	* fixed some exception stack trace bugs (double entries, incorrect 
	  position info) in the new "on-demand" stack trace solution