@@ -47,9 +47,7 @@ QoreNode* buffer_to_QoreNode(command& cmd, const CS_DATAFMT& datafmt, const outp
      {
 	CS_CHAR* value = (CS_CHAR*)(buffer.value);
 	QoreString *s;
-#ifdef FREETDS
-	// sometimes freetds values are not coming with null termination for some reason
-	// see if there is a null value
+	// sometimes the strings are not null terminated, both with sybase and freetds
 	if (!memchr(value, '\0', buffer.value_len))
 	{
 	   s = new QoreString(value, buffer.value_len - 1, encoding);
@@ -57,9 +55,6 @@ QoreNode* buffer_to_QoreNode(command& cmd, const CS_DATAFMT& datafmt, const outp
 	}
 	else
 	   s = new QoreString(value, encoding);
-#else
-	s = new QoreString(value, encoding);
-#endif
 	s->trim_trailing_blanks();
 	//printd(5, "name=%s vlen=%d strlen=%d len=%d str='%s'\n", datafmt.name, buffer.value_len, s->strlen(), s->length(), s->getBuffer());
 	return new QoreNode(s);
@@ -75,7 +70,7 @@ QoreNode* buffer_to_QoreNode(command& cmd, const CS_DATAFMT& datafmt, const outp
 	// see if we need to strip trailing newlines (could not find a defined USER_TYPE_* for this!)
 	if (datafmt.usertype == 1)
 	{
-#ifdef FREETDS
+#ifdef FREETDS_x
 	   // sometimes freetds values are not coming with null termination for some reason
 	   // see if there is a null value
 	   if (!memchr(value, '\0', buffer.value_len))
